<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.bricefw.buslemans.activities.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/recherche_rapide"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        app:showAsAction="never"
        android:title="@string/menu_refresh"/>
<!--
    <item
        android:id="@+id/menu_sync_wear"
        app:showAsAction="never"
        android:title="@string/sync_wear"/>
-->

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about_text"
        app:showAsAction="never" />
</menu>
