<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/cv_text"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/cv_first_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_stopname"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/cv_second_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_first_line"
            android:text="@string/example_linename"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cv_third_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_second_line"
            android:text="@string/example_passages"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/warningButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:contentDescription="@string/warning_button"
            app:srcCompat="@drawable/ic_warning_black_24dp"
            tools:ignore="VectorDrawableCompat" />

    </RelativeLayout>
</android.support.v7.widget.CardView>